# qa_guru_8_18

./: pyproject.toml  pyvenv.cfg  readme.md
